--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   web:
     build: .
-    command: gunicorn -b 0.0.0.0 -p 8000 tutorials.wsgi:application
+    command: gunicorn -b 0.0.0.0 -p 8000 sewing.wsgi.application
     ports:
       - "8000:8000"
